--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,86 @@
     color: goldenrod;
 }
 body{
-     background-image: url(http://grushevskogo5.com/upload/iblock/4c4/fd89b3c83ecda94a8e60d20672fd5991.jpg);
-     background-size: 100%;
-     background-position: center center;
 
 }
+button.example {
+	-webkit-transition: all 0s ease-out;
+	-moz-transition: all 0s ease-out;
+	-o-transition: all 0s ease-out;
+	-ms-transition: all 0s ease-out;
+	transition: all 0s ease-out;
+	height: 35px;
+	display: block;
+	font-family: Arial, "Helvetica", sans-serif;
+	font-size: 14px;
+	color: #fff;
+	text-decoration: none;
+	text-align: center;
+	text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
+	padding: 4px 20px 0;
+	margin: 10px auto;
+	left: 30px;
+	position: relative;
+	cursor: pointer;
+	border: none;
+	border-top-right-radius: 100%;
+	border-bottom-right-radius: 100%;
+
+}
+
+button.facebook {
+	border-left: solid 1px #2E4476;
+	background: #3B5999;
+
+	-webkit-box-shadow: 0px 5px 0px 0px #2E4476;
+	box-shadow: 0px 5px 0px 0px #2E4476;
+}
+
+
+
+button.example:active {
+	top: 3px;
+}
+
+button.facebook:active {
+	-webkit-box-shadow: 0px 2px 0px 0px #2E4476;
+	box-shadow: 0px 2px 0px 0px #2E4476;
+}
+
+
+
+button.example:before {
+	content: "1";
+	width: 35px;
+	height: 25px;
+	display: block;
+	position: absolute;
+	padding-top: 10px;
+	line-height: 20px;
+	top: 0px;
+	margin-left: -54px;
+	font-size: 16px;
+	font-weight: bold;
+	border-top-left-radius: 100%;
+	border-bottom-left-radius: 100%;
+}
+
+button.facebook:before {
+	border-right: solid 1px #2E4476;
+	background: #3B5999;
+
+	-webkit-box-shadow: 0px 5px 0px 0px #2E4476;
+	box-shadow: 0px 5px 0px 0px #2E4476;
+}
+
+
+
+button.example:active:before {
+	top: -3px;
+}
+
+button.facebook:active:before {
+	-webkit-box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
+	box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
+}
+
