--- a/css/main.css
+++ b/css/main.css
@@ -1,104 +1,99 @@
 .hdr {
-	font-family: Verdana;
-	font-size: 3em;
-	font-weight: bold;
-	color:black;
-	letter-spacing: -0.11em;
+    font-family: Verdana;
+    font-size: 3em;
+    font-weight: bold;
+    color: orange;
+    letter-spacing: -0.11em;
     text-shadow: -0.05em 0px 0.07em #000000;
-    width: 9em;
-
 }
 
 
-.red{
-	display: inline-block;
-	color: #F00000;
 }
-.orange{
+body {
+    font: 14px Arial, Helvetica, sans-serif;
+    /* Рубленый шрифт текста */
+
+    margin: 0;
+    /* Отступы на странице */
+}
+h1 {
+    font-size: 36px;
+    /* Размер шрифта заголовка шапки */
+
+    margin: 0;
+    /* Убираем отступы */
+
+    color: #fc6;
+    /* Цвет текста заголовка шапки */
+}
+h2 {
+    margin-top: 0;
+    /* Убираем отступ сверху */
+}
+.header {
+    background: navy;
+    /* Цвет фона шапки */
+
+    padding: 10px;
+    /* Поля вокруг текста */
+}
+.sidebar {
+    float: right;
+    /* Обтекание справа */
+
+    font-size: 30px;
+    padding: 5px;
+    /* Поля внутри блока */
+
+    margin: 1px 50px 20px 50px;
+    /* Значения отступа от блока */
+}
+.content {
+    margin: 10px 25% 20px 5px;
+    /* Значения отступа от правого блока */
+
+    padding: 5px;
+    /* Поля внутри блока */
+}
+.footer {
+    background: #333;
+    /* Цвет фона подвал (футера) */
+
+    padding: 5px;
+    /* Поля внутри блока */
+
+    color: #fff;
+    /* Цвет текста футера */
+
+    clear: left;
+    /* Отменяем действие float */
+}
+a {
+    text-decoration: none;
+}
+.custom,
+.custom a:visited {
+    color: white;
+}
+.custom a {
+    padding: 10px;
+}
+.table {
     display: inline-block;
-    color: goldenrod;
+    display: table;
+    padding: 7px;
+    border: 1px solid #495058;
+    border-radius: 3%;
+    background-color: white;
+    padding: 5px;
+    width: 500px;
+    background-image: url(http://www.gamer.ru/system/attached_images/images/000/685/185/original/logo-burst-wide-2dcym.jpg);
+    background-size: 100%;
 }
-body{
-
+.top9,
+.top9 a:visited {
+    color: white;
 }
-button.example {
-	-webkit-transition: all 0s ease-out;
-	-moz-transition: all 0s ease-out;
-	-o-transition: all 0s ease-out;
-	-ms-transition: all 0s ease-out;
-	transition: all 0s ease-out;
-	height: 35px;
-	display: block;
-	font-family: Arial, "Helvetica", sans-serif;
-	font-size: 14px;
-	color: #fff;
-	text-decoration: none;
-	text-align: center;
-	text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
-	padding: 4px 20px 0;
-	margin: 10px auto;
-	left: 30px;
-	position: relative;
-	cursor: pointer;
-	border: none;
-	border-top-right-radius: 100%;
-	border-bottom-right-radius: 100%;
-
+caption {
+    color: black;
 }
-
-button.facebook {
-	border-left: solid 1px #2E4476;
-	background: #3B5999;
-
-	-webkit-box-shadow: 0px 5px 0px 0px #2E4476;
-	box-shadow: 0px 5px 0px 0px #2E4476;
-}
-
-
-
-button.example:active {
-	top: 3px;
-}
-
-button.facebook:active {
-	-webkit-box-shadow: 0px 2px 0px 0px #2E4476;
-	box-shadow: 0px 2px 0px 0px #2E4476;
-}
-
-
-
-button.example:before {
-	content: "1";
-	width: 35px;
-	height: 25px;
-	display: block;
-	position: absolute;
-	padding-top: 10px;
-	line-height: 20px;
-	top: 0px;
-	margin-left: -54px;
-	font-size: 16px;
-	font-weight: bold;
-	border-top-left-radius: 100%;
-	border-bottom-left-radius: 100%;
-}
-
-button.facebook:before {
-	border-right: solid 1px #2E4476;
-	background: #3B5999;
-
-	-webkit-box-shadow: 0px 5px 0px 0px #2E4476;
-	box-shadow: 0px 5px 0px 0px #2E4476;
-}
-
-
-
-button.example:active:before {
-	top: -3px;
-}
-
-button.facebook:active:before {
-	-webkit-box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
-	box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
-}
-
