--- a/heroes.css
+++ b/heroes.css
@@ -1,6 +1,11 @@
 .classes {
     width: 50%;
     margin-top: 50px;
+    color: rgb(207, 207, 207);
+}
+
+.class {
+    text-align: center;
 }
 
 .class-header img {
@@ -11,13 +16,13 @@
 .class-header * {
     display: inline-block;
     font-size: 30px;
-    color: white;
 }
 
 .hero {
-    color: white;
+    margin-top: 10px;
     display: inline-block;
     width: 80px;
+    margin-right: 15px;
 }
 
 .hero h3 {
