--- a/heroes.css
+++ b/heroes.css
@@ -1,5 +1,5 @@
 .classes {
-    width: 50%;
+    width: 60%;
     margin-top: 50px;
     color: rgb(207, 207, 207);
 }
@@ -34,7 +34,8 @@
     padding: 10px 15px 10px 15px;
     border: 3px #212121 solid;
     border-radius: 10px;
-    background-color: rgba(33, 33, 33, 0.7)
+    background-color: rgba(33, 33, 33, 0.7);
+    margin-bottom: 10px;
 }
 
 .heroes {
