--- a/heroes.css
+++ b/heroes.css
@@ -1,9 +1,3 @@
-.classes {
-    width: 60%;
-    margin-top: 50px;
-    color: rgb(207, 207, 207);
-}
-
 .class {
     text-align: center;
 }
@@ -16,6 +10,7 @@
 .class-header * {
     display: inline-block;
     font-size: 30px;
+    margin-top: -7px;
 }
 
 .hero {
@@ -40,4 +35,69 @@
 
 .heroes {
     margin: auto;
+}
+
+.content {
+    margin-top: 50px;
+    color: rgb(207, 207, 207);
+}
+
+.hero-details {
+    border: 3px #212121 solid;
+    border-radius: 10px;
+    padding: 0;
+}
+
+table {
+    text-align: center;
+    color: rgb(207, 207, 207);
+    width: 100%;
+}
+
+.hero-titel {
+    text-align: center;
+    font-size: 25px;
+    line-height: 30px;
+}
+
+td {
+    border: 1px #455a64 solid;
+    background-color: rgba(33, 33, 33, 0.7);
+    border-bottom-width: 2px;
+    border-top-width: 2px;
+    font-size: 15px;
+    line-height: 20px;
+}
+
+td:first-child {
+    border-left: none;
+}
+
+td:last-child {
+    border-right: none;
+}
+
+tr:first-child td {
+    border-top: none;
+}
+
+tr:last-child td {
+    border-bottom: none;
+}
+
+.sposobnost {
+    display: inline-block;
+    margin: 13px;
+}
+
+.sposobnost img {
+    height: 64px;
+}
+
+.sposobnosty {
+    text-align: center;
+}
+
+.fat-bottom td {
+    border-bottom-width: 3px;
 }
