--- a/css/main.css
+++ b/css/main.css
@@ -1,101 +1,66 @@
-.hdr {
-    font-family: Verdana;
-    font-size: 3em;
-    font-weight: bold;
-    color: orange;
-    letter-spacing: -0.11em;
-    text-shadow: -0.05em 0px 0.07em #000000;
+video#bgvid {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+    background: url(../img/logan.jpg) no-repeat;
+    background-size: cover;
 }
 
-
+.content {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 33, 33, 0.7);
+    text-align: center;
+    position: absolute;
 }
-body {
-    font: 14px Arial, Helvetica, sans-serif;
-    /* Рубленый шрифт текста */
 
-    margin: 0;
-    /* Отступы на странице */
-}
 h1 {
-    font-size: 36px;
-    /* Размер шрифта заголовка шапки */
-
-    margin: 0;
-    /* Убираем отступы */
-
-    color: #fc6;
-    /* Цвет текста заголовка шапки */
+    font-family: Overwatch;
+    color: #fb8c00;
+    font-size: 170px;
 }
-h2 {
-    margin-top: 0;
-    /* Убираем отступ сверху */
+
+p {
+    color: rgb(207, 207, 207);
+    font-size: 20px;
 }
-.header {
-    background: navy;
-    /* Цвет фона шапки */
 
-    padding: 10px;
-    /* Поля вокруг текста */
+.button {
+    display: inline-block;
+    font-size: 50px;
+    margin: 10px 40px 10px 40px;
+    border: 4px #fb8c00 solid;
+    border-radius: 15px;
+    background-color: rgba(33, 33, 33, 0.8);
 }
-.sidebar {
-    float: right;
-    /* Обтекание справа */
 
-    font-size: 30px;
-    padding: 5px;
-    /* Поля внутри блока */
-
-    margin: 1px 50px 20px 50px;
-    /* Значения отступа от блока */
+.buttons {
+    margin-top: 100px;
 }
-.footer {
-    background: #333;
-    /* Цвет фона подвал (футера) */
 
-    padding: 5px;
-    /* Поля внутри блока */
-
-    color: #fff;
-    /* Цвет текста футера */
-
-    clear: left;
-    /* Отменяем действие float */
-}
 a {
+    color: rgb(207, 207, 207);
+    padding: 10px 20px 10px 20px;
+}
+
+a:hover {
+    color: #fb8c00;
     text-decoration: none;
 }
-.custom,
-.custom a:visited {
-    color: white;
-}
-.custom a {
-    padding: 10px;
-}
-.table {
-    display: inline-block;
-    display: table;
-    padding: 7px;
-    border: 1px solid #495058;
-    background-color: white;
-    padding: 5px;
-    width: 1503.5px;
-    height: 800;
-    background-image: url();
-    background-size: 100%;
-}
-.top9,
-.top9 a:visited {
-    color: black;
-}
-caption {
-    color: black;
-    font-size:20px;
-}
-.t1{
-    padding-left: 510px;
-    font-size: 27px;
 
+a:active {
+    text-decoration: none;
 }
-.t2{
-    font-family: "Comic Sans MS",Comic Sans, cursive;
+
+.container {
+    height: 600px;
+    position: relative;
+    top: 50%;
+    margin-top: -300px;
 }
